fix for >120px showcase entry image on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -554,6 +554,11 @@ ul#lists{
 	
 	.return-to-top {
 	visibility: hidden;	}
+	
+	.showcase_entry_img img {
+		max-height: 120px;
+		padding-bottom: 1em;
+	}
 }
 
 
